@startuml

class ListExamsUI {
    +headline()
    +emptyMessage()
    +elements()
    +elementPrinter()
    +elementName()
    +listHeader()
}

class ListStudentExamsController {
    +examOfLoggedStudent()
    +loggedStudent()
}

class ListExamsService {
    +allExams()
    +examOfLoggedStudent(Student student)
    +getExamByCourse(Course course)
}

class AuthorizationService {
    +session()
}

class ExamRepository {
}

class StudentUserRepository {
    +findByUsername()
}

class SystemUser {
    +authenticatedUser()
}

class Username {
    +username()
}

class PersistenceContext {
    +repositories()
}

class ExamRepository {
    +create()
    +findAll()
}

class CourseRepository {
    +findAll()
}

class Student {
    +user()
    +mecanographicNumber()
    +identity()
    +taxPayNumber()
    +birthdate()
}

class Course {
    +getActualState()
}

class CourseEnrollmentRequestService {
    +getStudentEnrollment(student, course)
}

class CourseEnrollmentRequestRepository {
    +findByStudentAndCourse(user, course)
}

class CourseEnrollmentRequest {
    +courseEnrollmentStatus()
}


ListExamsUI --> ListStudentExamsController
ListStudentExamsController --> ListExamsService
ListStudentExamsController --> AuthorizationService
AuthorizationService --> SystemUser
SystemUser --> Username
Username --> PersistenceContext
PersistenceContext --> repositories
repositories --> ExamRepository
repositories --> StudentUserRepository
ListStudentExamsController --> Student
ListExamsService --> PersistenceContext
repositories --> CourseRepository
ListStudentExamsController --> Course
ListStudentExamsController --> CourseEnrollmentRequestService
CourseEnrollmentRequestService --> PersistenceContext
repositories --> CourseEnrollmentRequestRepository
ListStudentExamsController --> CourseEnrollmentRequest

@enduml